--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* =======google fonnts====== */
-@import url("https://fonts.googleapis.com/css2?family=poppins");
+/*@import url("https://fonts.googleapis.com/css2?family=poppins");*/
 
 /*======= variable css====== */
 :root{
