--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     --container-color: #FFFFFF;
 
     /* =======font and typography========= */
-    --body-font: 'Crimson', sans-serif;
+    --font-family: 'Crimson', sans-serif;
     --biggest-font-size: 2.25rem;
     --h1-font-size: 1.5rem;
     --h2-font-size: 1.25rem;
