--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body{
     background-color: var(--body-color);
     color: var(--text-color);
     line-height: 1.6;
+     transition: all 100ms linear;
 }
 
 h1,h2,h3,p,ul{
@@ -607,7 +608,11 @@ img{
 
 
 
-
+.change-theme {
+   
+    color: bisque;
+    font-size: 1.4rem;
+  }
 
 
 
